# cppFinal

./: .gitignore  CMakeLists.txt  README.md
client/: .clang-format  .gitignore  CMakeLists.txt
client/res/: mat.qrc
client/src/: CMakeLists.txt  main.cpp  welcome_page.cpp  welcome_page.h
client/src/ans_page/: all_page.cpp  opeator_mat.hpp  single_page.cpp  single_page.h
client/src/ans_page/game_window/: game_window.cpp
client/src/ans_page/questions/: question_list.cpp
client/src/ans_page/show_area/: hint_dialog.h
client/src/create_page/: create_game_window.hpp  create_mode.cpp  create_page.hpp  select_page.h
client/src/decomposer/: auto_make_question.cpp  decompose_mat.cpp  decompose_mat.h
client/src/test/: level_mode_test.cpp  modeltest.cpp
client/src/web_challenge/: challenge_mode.cpp  challenge_mode.h
client/testIfCan/: test_unique.cpp
res/: default_mat.json  svg.qrc
serve/: CMakeLists.txt
serve/client_test/: CMakeLists.txt  main.cpp  test.json
serve/src/: CMakeLists.txt  auto_make_question.h  game_users.cpp  game_users.h  main.cpp  scoket_event_type.h  serve_model.cpp  serve_model.h  web_socket.cpp  web_socket.h
src/: CMakeLists.txt  game_window.h  game_window.hpp  level_mode.cpp  level_mode.h  main.cpp  welcome_page.cpp  welcome_page.h
src/ans_page/: all_page.cpp  all_page.h  all_page.hpp  ans_model.hpp  ans_stack.hpp  opeator_mat.hpp  single_page.cpp  single_page.h  single_page.hpp
src/ans_page/game_window/: game_window.cpp  game_window.h
src/ans_page/questions/: question_list.h
src/ans_page/show_area/: hint_dialog.cpp  show_mat.hpp  show_widget.hpp
src/create_page/: create_game_window.hpp  create_mode.cpp  create_mode.h  create_page.hpp  select_page.cpp  select_page.h  show_num_page.cpp  show_num_page.h
src/decomposer/: decompose_mat.cpp  decompose_mat.h
src/game_window/: game_window.cpp  game_window.h
src/questions/: question_list.cpp  question_list.h
src/show_area/: show_mat.hpp  show_widget.hpp
src/test/: level_mode_test.cpp  question_test.cpp
testIfCan/: CMakeLists.txt  main.cpp
